--- a/_posts/containers/2015-11-05-sample.md
+++ b/_posts/containers/2015-11-05-sample.md
@@ -5,7 +5,7 @@ date:   2015-11-05 11:53:52 -0500
 categories: containers
 tags: document
 author: John Doe
-permalink: /:title
+permalink: /:title/
 ---
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
